cluster-setup/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    linkerd.io/inject: enabled
