cluster-setup/argocd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: a69ff326d258f11ea9d670af436ef951-330351033.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80
